--- a/style.css
+++ b/style.css
@@ -22,18 +22,9 @@ body {
 /*SIDEBAR*/
 
 #sideBarContainer{
-  width: 525px;
-  height: 600px;
+  height: 100px;
   background-color: black;
   margin-top: 13px;
-  float: right;
-}
-
-#sideBarHeader {
-  margin: 10px;
-  font-size: 20px;
-  text-align: center;
-  font-family: cursive;
 }
 
 #daisyPic {
@@ -44,7 +35,6 @@ body {
 
 #templates .card{
   display: inline-block;
-  /*margin-left: 5px;*/
 }
 
 #accessories .card{
@@ -65,22 +55,14 @@ body {
   display: inline-block;
 }
 
-#messageButton {
-  margin-top: 15px;
-}
 
-.btn {
+/*.btn {
   font-family:'Covered By Your Grace', cursive;
   font-size: 30px;
   background-color: green;
   border-radius: 35px;
   margin: 0 auto;
-}
-
-.card {
-  background-color: teal;
-  border: 2px solid black;
-}
+}*/
 
 .imageSelector {
   width: 100px;
@@ -112,9 +94,9 @@ body {
   height:24px;
 }
 
-#buttonBar {
+/*#buttonBar {
   margin-left: 100px;
-}
+}*/
 
 #resizeButton {
   border-radius: 0;
@@ -134,9 +116,8 @@ body {
 
 #canvas {
   background-color: white;
-  width: 700px;
-  height: 700px;
-  float: left;
+  /*width: 100%;*/
+  height: 500px;
   margin-top: 13px;
   padding-left: 10px;
 }
